--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="button">
          <button class="btn btn-primary" type="button">Proceed to Payment</button><br>
-         <button type="button" onclick="confirm()" class="btn btn-light">Cancel Order</button>
+         <button type="button" onclick="confirm()" class="btn btn-secondary">Cancel Order</button>
       </div>
 
     </div>
